--- a/application/package.json
+++ b/application/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "rxjs": "~6.4.0",
+    "serialize-javascript": "^2.1.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
